dev/non_executable_reasons_record/192.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¤‰æ•°ã®è¨­å®š
name=GUITest
#classpath=".:/root/git_jupyter_notebook/Java/postgresql-42.1.1.jar"
#classpath=".:/Users/ftakao2007/jupyter/jupyter_notebook/Java/postgresql-42.1.1.jar"


### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java

import java.awt.*;
import java.awt.event.*;

class PrefFrame extends Frame {
  //# ã‚³ãƒ³ã‚¹ãƒˆãƒ©ã‚¯ã‚¿
  public PrefFrame(String title) {
    //#ãƒ•ãƒ¬ãƒ¼ãƒ ã®ã‚¿ã‚¤ãƒˆãƒ«ã®è¨­å®š
    setTitle(title);

    //#ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é–‰ã˜ã‚‹æ™‚ã®ã‚¤ãƒ™ãƒ³ãƒˆå‡¦ç†ã€‚ç„¡åã‚¯ãƒ©ã‚¹
    addWindowListener(new WindowAdapter() {
      public void windowClosing(WindowEvent e) {
        System.exit(0);
      }
    });
  }
}

public class ${name} {
  public static void main(String args[]){
    //# PrefFrameã‚¯ãƒ©ã‚¹ã®ã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹ã‚’ç”Ÿæˆã€‚ã‚³ãƒ³ã‚¹ãƒˆãƒ©ã‚¯ã‚¿ã‚’å‘¼ã³å‡ºã—ã¦ã„ã‚‹
    PrefFrame frm = new PrefFrame("éƒ½é“åºœçœŒãƒã‚¹ã‚¿ãƒ¼");
    //# Frameã‚¯ãƒ©ã‚¹ã‹ã‚‰ç¶™æ‰¿ã—ãŸãƒ¡ã‚½ãƒƒãƒ‰ã‚’åˆ©ç”¨
    //# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã®è¡¨ç¤ºä½ç½®
    frm.setLocation(300, 200);
    //# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã®ã‚µã‚¤ã‚º
    frm.setSize(250, 350);
    //# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã®èƒŒæ™¯è‰²
    //# Color.LIGHT_GRAYã¯Colorã‚¯ãƒ©ã‚¹ã®å®šæ•°
    frm.setBackground(Color.LIGHT_GRAY);
    //# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’è¡¨ç¤ºã™ã‚‹
    frm.setVisible(true);
  }
}
EOS

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«
#javac ${name}.java
javac -encoding UTF-8 ${name}.java

### å®Ÿè¡Œ
#java -classpath ${classpath} ${name}
java  ${name}
------------------

[0;36m  File [0;32m"<ipython-input-1-1ca2d12fd9e3>"[0;36m, line [0;32m11[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-1ca2d12fd9e3>, line 11)

Executability                            : False
